--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -15,13 +15,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
     <!--Bootstrap-->
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
     <!--css-scss-->
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/sass/estilos.scss">
     <!--script-->
     <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
 </head>
@@ -43,7 +41,7 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
@@ -74,7 +72,7 @@
             <h3>A nuestra familia la conforman ellos</h3>
 
 
-            <table class="tabla table table-hover container-fluid " border="1" cellpadding="10" align="center">
+            <table class="tabla table table-hover  container-fluid " border="1" cellpadding="10" align="center">
 
                 <thead class="tablaCabecera">
                     <tr>
@@ -86,7 +84,7 @@
                         <th>Propietario</th>
                     </tr>
                 </thead>
-                <tbody class="tablaBody">
+                <tbody class="tablaBody table-dark">
                     <tr>
                         <td>Paco</td>
                         <td>Macho</td>
