--- a/contactos.html
+++ b/contactos.html
@@ -16,13 +16,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
     <!--Bootstrap-->
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
     <!--css-scss-->
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/sass/estilos.scss">
     <!--script-->
     <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
 </head>
@@ -41,7 +39,7 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
