--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -72,7 +72,7 @@
             <h3>A nuestra familia la conforman ellos</h3>
 
 
-            <table class="tabla table table-hover  col-12 " border="1" cellpadding="10" align="center">
+            <table class="tabla table table-hover  conteiner-fluid " border="1" cellpadding="10" align="center">
 
                 <thead class="tablaCabecera">
                     <tr>
