--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 
 
     <header>
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i
+                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
-        <nav class="main"> 
-            
+        <nav class="main">
+
             <ul class="row">
 
-                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
+                </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
