--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -31,7 +31,8 @@
 
     <header>
 
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
@@ -41,7 +42,8 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
+                </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
@@ -68,123 +70,9 @@
                     intacta su pasion por este deporte. </p>
             </div>
         </section>
-        <section>
-            <h3>A nuestra familia la conforman ellos</h3>
 
-
-            <table class="tabla table table-hover  conteiner-fluid " border="1" cellpadding="10" align="center">
-
-                <thead class="tablaCabecera">
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Sexo</th>
-                        <th>Color</th>
-                        <th>Años/Meses</th>
-                        <th>Chip</th>
-                        <th>Propietario</th>
-                    </tr>
-                </thead>
-                <tbody class="tablaBody table-dark">
-                    <tr>
-                        <td>Paco</td>
-                        <td>Macho</td>
-                        <td>Rojo y blanco</td>
-                        <td>1 año y 4 meses</td>
-                        <td>Si</td>
-                        <td>Chechu</td>
-                    </tr>
-                    <tr>
-                        <td>Emma</td>
-                        <td>Hembra</td>
-                        <td>Rojo y blanco </td>
-                        <td>2 años y 6 meses</td>
-                        <td>Si</td>
-                        <td>Nihuen</td>
-                    </tr>
-                    <tr>
-                        <td>Larry</td>
-                        <td>Macho</td>
-                        <td>Rojo y blanco</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Guillermina</td>
-                    </tr>
-                    <tr>
-                        <td>Curry</td>
-                        <td>Macho</td>
-                        <td>Rojo y blanco</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Mimi</td>
-                    </tr>
-                    <tr>
-                        <td>Roma</td>
-                        <td>Hembra</td>
-                        <td>Blanca</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Nihuen</td>
-                    </tr>
-                    <tr>
-                        <td>Scottie</td>
-                        <td>Macho</td>
-                        <td>Rojo y blanco</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Valeria</td>
-                    </tr>
-                    <tr>
-                        <td>Lebron</td>
-                        <td>Macho</td>
-                        <td>Rojo, blanco y negro</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Sole</td>
-                    </tr>
-                    <tr>
-                        <td>Amanda</td>
-                        <td>Hembra</td>
-                        <td>Blanca</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Rocio</td>
-                    </tr>
-                    <tr>
-                        <td>Goyo</td>
-                        <td>Macho</td>
-                        <td>Rojo, blanco y negro</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Corina</td>
-                    </tr>
-                    <tr>
-                        <td>Lupita</td>
-                        <td>Hembra</td>
-                        <td>Rojo y blanco</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Claudio</td>
-                    </tr>
-                    <tr>
-                        <td>Olivia</td>
-                        <td>Hembra</td>
-                        <td>Rojo y blanco</td>
-                        <td>2 meses</td>
-                        <td>No</td>
-                        <td>Ramiro</td>
-                    </tr>
-
-                </tbody>
-            </table>
-
-        </section>
 
     </main>
-
-
-
-
-
 
 
     <footer>
