--- a/raza.html
+++ b/raza.html
@@ -30,7 +30,8 @@
 
     <header>
 
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
@@ -40,7 +41,8 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
+                </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
@@ -81,7 +83,8 @@
                 <li class="listaRaza"> Ojos: negros, redondos y grandes</li>
                 <li class="listaRaza"> Nariz: negra.</li>
                 <li class="listaRaza"> Pelaje: corto, liso y elegante.</li>
-                <li class="listaRaza"> Color de pelaje: rojo, beige, blanco, atigrado y varias tonalidades de estos.</li>
+                <li class="listaRaza"> Color de pelaje: rojo, beige, blanco, atigrado y varias tonalidades de estos.
+                </li>
                 <li class="listaRaza"> Orejas: cortas y tiradas hacia atrás.</li>
                 <li class="listaRaza"> Cola: corta o nula.</li>
             </ul>
