--- a/cuidados.html
+++ b/cuidados.html
@@ -29,7 +29,8 @@
 
     <header>
 
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
@@ -39,7 +40,8 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
+                </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
@@ -57,14 +59,17 @@
 
             <div>
                 <ul class="container-fluid">
-                    <li class="listaCuidados"> Es necesario brindarle una alimentación balanceada para evitar que sufra de sobrepeso u
+                    <li class="listaCuidados"> Es necesario brindarle una alimentación balanceada para evitar que sufra
+                        de sobrepeso u
                         obesidad.
                     </li>
-                    <li class="listaCuidados"> Lleva a tu perro periódicamente a consultas veterinarias para un chequeo general y así
+                    <li class="listaCuidados"> Lleva a tu perro periódicamente a consultas veterinarias para un chequeo
+                        general y así
                         descartar
                         posibles
                         complicaciones en la salud, además recuerda tener todas sus vacunas al día. </li>
-                    <li class="listaCuidados"> Sáquelo a pasear diariamente, la actividad física es un factor fundamental en la salud de
+                    <li class="listaCuidados"> Sáquelo a pasear diariamente, la actividad física es un factor
+                        fundamental en la salud de
                         todo
                         perro, pero
                         evite que participe en ejercicios exhaustivos cuando hayan condiciones climáticas muy
@@ -72,20 +77,25 @@
                         muy
                         cálidas.
                     </li>
-                    <li class="listaCuidados"> Se recomienda cepillar su pelaje dos o tres veces por semana, es algo que él disfruta y
+                    <li class="listaCuidados"> Se recomienda cepillar su pelaje dos o tres veces por semana, es algo que
+                        él disfruta y
                         además
                         mejora su
                         apariencia. </li>
-                    <li class="listaCuidados"> Limpie sus arrugas con regularidad (1 o 2 veces por semanas), esto puede hacerlo con un
+                    <li class="listaCuidados"> Limpie sus arrugas con regularidad (1 o 2 veces por semanas), esto puede
+                        hacerlo con un
                         algodón
                         remojado y
                         enjabonado, enjuague y seque perfectamente para evitar la propagación de bacterias. </li>
-                    <li class="listaCuidados"> Báñelo cada 3 o 4 semanas para prevenir pulgas, ácaros y hongos, utilice un shampoo que no
+                    <li class="listaCuidados"> Báñelo cada 3 o 4 semanas para prevenir pulgas, ácaros y hongos, utilice
+                        un shampoo que no
                         altere
                         el ph de
                         su piel. </li>
-                    <li class="listaCuidados"> Cuando vaya a bañarlo, utilice algodón para tapar sus oídos y evitar que entre agua. </li>
-                    <li class="listaCuidados"> Debido a sus orígenes, este perro suele ser muy «mordelón», en especial durante su edad
+                    <li class="listaCuidados"> Cuando vaya a bañarlo, utilice algodón para tapar sus oídos y evitar que
+                        entre agua. </li>
+                    <li class="listaCuidados"> Debido a sus orígenes, este perro suele ser muy «mordelón», en especial
+                        durante su edad
                         joven,
                         así
                         que
