--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,8 @@
 
   <header>
 
-    <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+    <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+          class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
     <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
@@ -83,7 +84,7 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/fotofamilia.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/fotofamilia.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Familia</h5>
 
@@ -91,7 +92,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/paco.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/paco.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Paco</h5>
 
@@ -99,7 +100,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/emma.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/emma.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Emma</h5>
 
@@ -107,7 +108,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/larry.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/larry.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Larry</h5>
 
@@ -115,7 +116,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/curry.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/curry.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Curry</h5>
 
@@ -123,7 +124,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/roma.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/roma.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Roma</h5>
 
@@ -131,7 +132,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/scottie.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/scottie.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Scottie</h5>
 
@@ -139,7 +140,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/lebron.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/lebron.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Lebron</h5>
 
@@ -147,7 +148,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/amanda.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/amanda.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Amanda</h5>
 
@@ -155,7 +156,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/goyo.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/goyo.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Goyo</h5>
 
@@ -163,7 +164,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/lupita.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/lupita.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Lupita</h5>
 
@@ -171,7 +172,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imagenes/olivia.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/olivia.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Olivia</h5>
 
