--- a/contactos.html
+++ b/contactos.html
@@ -29,7 +29,8 @@
 
     <header>
 
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i class="fas fa-paw" aria-hidden="true"></i></a></h1>
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
@@ -39,7 +40,8 @@
 
             <ul class="row">
 
-                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a> </li>
+                <li class="col-12 col-md-2 "> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
+                </li>
                 <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
                 <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
                 <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
