--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pepote es una pagina web amante de los bulldog ingles">
-    <meta name="keywords" content="pepote, bulldog, bulldog ingles">
-    <title>Pepote</title>
+    <meta name="description"
+        content="En esta seccion de la pagina vamos a hablar sobre la raza y las caracteristicas del bulldog ingles">
+    <meta name="keywords" content="pepote, bulldog, bulldog ingles, raza, caracteristicas">
+    <title>Pepote-Raza</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,47 +23,87 @@
     <link rel="stylesheet" href="css/estilos.css">
     <!--script-->
     <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
-
 </head>
+
 
 <body>
 
-
-
-
     <header>
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i
+
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
                     class="fas fa-paw" aria-hidden="true"></i></a></h1>
+
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
-        <nav class="main">
-
-            <ul class="row">
-
-                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
-                </li>
-                <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
-                <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
-                <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
-                <li class="col-12 col-md-2"> <a href="contactos.html"><i class="fas fa-paw"></i>Contactos</a></li>
-
-            </ul>
-
-
-
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
     </header>
 
+
+
     <main>
-        <iframe class="container-fluid" width="853" height="480" src="https://www.youtube.com/embed/V23DbldqWW0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <section>
+            <h2>Raza</h2>
+
+            <div>
+                <p class="parrafoRaza container-fluid">El Bulldog inglés antiguo tenía un aspecto muy variado y se le
+                    daba mucha
+                    importancia
+                    a su carácter. Este perro
+                    actualmente hace parte de exposiciones de belleza canina y se destaca por su inteligencia y
+                    limpieza,
+                    además su
+                    relación con los niños es muy buena. El Bulldog inglés se adapta fácilmente a la convivencia con
+                    otros
+                    animales
+                    de compañía, ya que no suele ser conflictivo.
+                </p>
+            </div>
+        </section>
+        <section>
+            <h3>Caracteristicas</h3>
+            <ul class="container-fluid">
+                <li class="listaRaza"> Peso: aproximadamente 25 Kg.</li>
+                <li class="listaRaza"> Altura: entre 30 y 40 cm.</li>
+                <li class="listaRaza"> Cabeza: grande en proporción a su cuerpo.</li>
+                <li class="listaRaza"> Hocico: corto con pliegues por encima de la nariz.</li>
+                <li class="listaRaza"> Ojos: negros, redondos y grandes</li>
+                <li class="listaRaza"> Nariz: negra.</li>
+                <li class="listaRaza"> Pelaje: corto, liso y elegante.</li>
+                <li class="listaRaza"> Color de pelaje: rojo, beige, blanco, atigrado y varias tonalidades de estos.
+                </li>
+                <li class="listaRaza"> Orejas: cortas y tiradas hacia atrás.</li>
+                <li class="listaRaza"> Cola: corta o nula.</li>
+            </ul>
+        </section>
     </main>
-
-
-
 
 
     <footer>
@@ -77,16 +118,16 @@
         </div>
         <address>
             Garcia Gaston <br>
-            Esperanza, StaFe. <br>
+            Esperanza, StaFe.<br>
             Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
         </address>
 
+
+
     </footer>
 
-
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+
 </body>
-
-
 
 </html>
