--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -37,20 +37,34 @@
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
-        <nav class="main">
-
-
-            <ul class="row">
-
-                <li class="col-12 col-md-2"> <a href="quienes-somos.html"><i class="fas fa-paw"></i>¿Quienes somos?</a>
-                </li>
-                <li class="col-12 col-md-2"> <a href="raza.html"><i class="fas fa-paw"></i>Raza</a></li>
-                <li class="col-12 col-md-2"> <a href="cuidados.html"><i class="fas fa-paw"></i>Cuidados </a></li>
-                <li class="col-12 col-md-2"> <a href="galeria.html"><i class="fas fa-paw"></i>Galeria </a></li>
-                <li class="col-12 col-md-2"> <a href="contactos.html"><i class="fas fa-paw"></i>Contactos</a></li>
-
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
     </header>
 
     <main>
