--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="En esta seccion de la pagina vamos a hablar sobre la raza y las caracteristicas del bulldog ingles">
-    <meta name="keywords" content="pepote, bulldog, bulldog ingles, raza, caracteristicas">
-    <title>Pepote-Raza</title>
+    <meta name="description" content="Pepote es una pagina web amante de los bulldog ingles">
+    <meta name="keywords" content="pepote, bulldog, bulldog ingles">
+    <title>Pepote</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,22 +22,24 @@
     <link rel="stylesheet" href="css/estilos.css">
     <!--script-->
     <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
-</head>
 
+</head>
 
 <body>
 
+
+
+
     <header>
-
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i
                     class="fas fa-paw" aria-hidden="true"></i></a></h1>
-
 
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
+
         <nav class="navbar navbar-expand-lg navbar-light ">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon "></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -66,44 +67,15 @@
               </nav>
     </header>
 
-
-
     <main>
-        <section>
-            <h2>Raza</h2>
-
-            <div>
-                <p class="parrafoRaza container-fluid">El Bulldog inglés antiguo tenía un aspecto muy variado y se le
-                    daba mucha
-                    importancia
-                    a su carácter. Este perro
-                    actualmente hace parte de exposiciones de belleza canina y se destaca por su inteligencia y
-                    limpieza,
-                    además su
-                    relación con los niños es muy buena. El Bulldog inglés se adapta fácilmente a la convivencia con
-                    otros
-                    animales
-                    de compañía, ya que no suele ser conflictivo.
-                </p>
-            </div>
-        </section>
-        <section>
-            <h3>Caracteristicas</h3>
-            <ul class="container-fluid">
-                <li class="listaRaza"> Peso: aproximadamente 25 Kg.</li>
-                <li class="listaRaza"> Altura: entre 30 y 40 cm.</li>
-                <li class="listaRaza"> Cabeza: grande en proporción a su cuerpo.</li>
-                <li class="listaRaza"> Hocico: corto con pliegues por encima de la nariz.</li>
-                <li class="listaRaza"> Ojos: negros, redondos y grandes</li>
-                <li class="listaRaza"> Nariz: negra.</li>
-                <li class="listaRaza"> Pelaje: corto, liso y elegante.</li>
-                <li class="listaRaza"> Color de pelaje: rojo, beige, blanco, atigrado y varias tonalidades de estos.
-                </li>
-                <li class="listaRaza"> Orejas: cortas y tiradas hacia atrás.</li>
-                <li class="listaRaza"> Cola: corta o nula.</li>
-            </ul>
-        </section>
+        <iframe class="container-fluid" width="853" height="480" src="https://www.youtube.com/embed/V23DbldqWW0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </main>
+
+
+
 
 
     <footer>
@@ -118,16 +90,16 @@
         </div>
         <address>
             Garcia Gaston <br>
-            Esperanza, StaFe.<br>
+            Esperanza, StaFe. <br>
             Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
         </address>
 
-
-
     </footer>
 
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 
+    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </body>
+
+
 
 </html>
