--- a/contactos.html
+++ b/contactos.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina donde podras contactarnos y tambien poder enviar tu consulta">
-    <meta name="keywords"
-        content="pepote, bulldog, bulldog ingles, contactos, whatsapp, instagram, facebook, email, consulta">
+    <meta name="keywords" content="pepote, bulldog, bulldog ingles, contactos, whatsapp, instagram, facebook, email, consulta">
     <title>Pepote-Contactos</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -40,7 +39,7 @@
                 <span class="navbar-toggler-icon "></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 0px;">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
