--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
 
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
