--- a/raza.html
+++ b/raza.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="En esta seccion de la pagina vamos a hablar sobre la raza y las caracteristicas del bulldog ingles">
+    <meta name="description" content="En esta seccion de la pagina vamos a hablar sobre la raza y las caracteristicas del bulldog ingles">
     <meta name="keywords" content="pepote, bulldog, bulldog ingles, raza, caracteristicas">
     <title>Pepote-Raza</title>
     <!--Google fonts-->
@@ -41,7 +40,7 @@
                 <span class="navbar-toggler-icon "></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 0px;">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                       </li>
