--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 
 <head>
-    <!--meta-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pepote es una pagina web amante de los bulldog ingles">
-    <meta name="keywords" content="pepote, bulldog, bulldog ingles">
-    <title>Pepote</title>
-    <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--Bootstrap-->
-    <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <!--css-scss-->
-    <link rel="stylesheet" href="css/estilos.css">
-    <!--script-->
-    <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
+  <!--meta-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Pepote es una pagina web amante de los bulldog ingles">
+  <meta name="keywords" content="pepote, bulldog, bulldog ingles">
+  <title>Pepote</title>
+  <!--Google fonts-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!--Bootstrap-->
+  <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <!--css-scss-->
+  <link rel="stylesheet" href="css/estilos.css">
+  <!--script-->
+  <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -30,74 +30,75 @@
 
 
 
-    <header>
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i
-                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
+  <header>
+    <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>pepote<i
+          class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
-        <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
-
-
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-    </header>
-
-    <main>
-        <iframe class="container-fluid" width="853" height="480" src="https://www.youtube.com/embed/V23DbldqWW0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </main>
+    <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
 
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <iframe class="container-fluid" width="853" height="480" src="https://www.youtube.com/embed/V23DbldqWW0"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </main>
 
 
 
-    <footer>
-
-        <div>
-            <a href="index.html">Inicio</a>
-            <a href="quienes-somos.html">¿Quienes somos?</a>
-            <a href="raza.html">Raza</a>
-            <a href="cuidados.html">Cuidados </a>
-            <a href="galeria.html">Galeria </a>
-            <a href="contactos.html">Contactos</a>
-        </div>
-        <address>
-            Garcia Gaston <br>
-            Esperanza, StaFe. <br>
-            Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
-        </address>
-
-    </footer>
 
 
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+  <footer>
+
+    <div>
+      <a href="index.html">Inicio</a>
+      <a href="quienes-somos.html">¿Quienes somos?</a>
+      <a href="raza.html">Raza</a>
+      <a href="cuidados.html">Cuidados </a>
+      <a href="galeria.html">Galeria </a>
+      <a href="contactos.html">Contactos</a>
+    </div>
+    <address>
+      Garcia Gaston <br>
+      Esperanza, StaFe. <br>
+      Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
+    </address>
+
+  </footer>
+
+
+  <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </body>
 
 
