--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -2,26 +2,26 @@
 <html lang="en">
 
 <head>
-    <!--meta-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aqui vamos a hablos sobre quienes somos y los integrantes de nuestra familia">
-    <meta name="keywords" content="pepote, bulldog, bulldog ingles, ¿quienes somos?, familia ">
-    <title>Pepote-¿Quienes somos?</title>
-    <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--Bootstrap-->
-    <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <!--css-scss-->
-    <link rel="stylesheet" href="css/estilos.css">
-    <!--script-->
-    <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
+  <!--meta-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Aqui vamos a hablos sobre quienes somos y los integrantes de nuestra familia">
+  <meta name="keywords" content="pepote, bulldog, bulldog ingles, ¿quienes somos?, familia ">
+  <title>Pepote-¿Quienes somos?</title>
+  <!--Google fonts-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!--Bootstrap-->
+  <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-5.0.2-dist/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <!--css-scss-->
+  <link rel="stylesheet" href="css/estilos.css">
+  <!--script-->
+  <script src="https://kit.fontawesome.com/58426a2915.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -29,87 +29,88 @@
 
 
 
-    <header>
+  <header>
 
-        <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
-                    class="fas fa-paw" aria-hidden="true"></i></a></h1>
-
-
-        <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
-
-        <nav class="navbar navbar-expand-lg navbar-light ">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 0px;">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-    </header>
-
-    <main>
-        <section>
-            <h2>¿Quienes somos?</h2>
-
-            <div>
-                <p class="parrafoQuienesSomos container-fluid">Somos una familia de la ciudad de Esperanza, ubicada
-                    en la provinci de Santa Fe. Nos gustan los perros desde muy pequeños, y hace unos años atras
-                    conocimos esta hermosa raza llamada Bulldog Ingles.<br>
-                    Emma tiene 2 años y medio y ya es madre de 9 cachorritos, le encanta dormir con sus papás Nigu y
-                    Carlos y tambien jugar con sus juguetes.<br>
-                    Paco es el padre de la familia, el tiene 1 año y medio y tambien duerme con sus papás Chechu y
-                    Gaston, le gusta salir a pasear, aunque a veces pelea un poco con sus vecinos caninos.<br>
-                    El nombre PEPOTE es en honor al abuelo de la familia, Pepote Spies, quien fuera un conocido
-                    jugador y entrenador de basquet, actualmente ya retirado de su profesion, pero aun asi sigue
-                    intacta su pasion por este deporte. </p>
-            </div>
-        </section>
+    <h1 class="titulo container-fluid"><a href="index.html"><i class="fas fa-paw" aria-hidden="true"></i>Pepote<i
+          class="fas fa-paw" aria-hidden="true"></i></a></h1>
 
 
-    </main>
+    <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
+
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>¿Quienes somos?</h2>
+
+      <div>
+        <p class="parrafoQuienesSomos container-fluid">Somos una familia de la ciudad de Esperanza, ubicada
+          en la provinci de Santa Fe. Nos gustan los perros desde muy pequeños, y hace unos años atras
+          conocimos esta hermosa raza llamada Bulldog Ingles.<br>
+          Emma tiene 2 años y medio y ya es madre de 9 cachorritos, le encanta dormir con sus papás Nigu y
+          Carlos y tambien jugar con sus juguetes.<br>
+          Paco es el padre de la familia, el tiene 1 año y medio y tambien duerme con sus papás Chechu y
+          Gaston, le gusta salir a pasear, aunque a veces pelea un poco con sus vecinos caninos.<br>
+          El nombre PEPOTE es en honor al abuelo de la familia, Pepote Spies, quien fuera un conocido
+          jugador y entrenador de basquet, actualmente ya retirado de su profesion, pero aun asi sigue
+          intacta su pasion por este deporte. </p>
+      </div>
+    </section>
 
 
-    <footer>
-
-        <div>
-            <a href="index.html">Inicio</a>
-            <a href="quienes-somos.html">¿Quienes somos?</a>
-            <a href="raza.html">Raza</a>
-            <a href="cuidados.html">Cuidados </a>
-            <a href="galeria.html">Galeria </a>
-            <a href="contactos.html">Contactos</a>
-        </div>
-        <address>
-            Garcia Gaston <br>
-            Esperanza, StaFe.<br>
-            Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
-        </address>
+  </main>
 
 
+  <footer>
 
-    </footer>
+    <div>
+      <a href="index.html">Inicio</a>
+      <a href="quienes-somos.html">¿Quienes somos?</a>
+      <a href="raza.html">Raza</a>
+      <a href="cuidados.html">Cuidados </a>
+      <a href="galeria.html">Galeria </a>
+      <a href="contactos.html">Contactos</a>
+    </div>
+    <address>
+      Garcia Gaston <br>
+      Esperanza, StaFe.<br>
+      Copyright &copy; 2021 Garcia Gaston, todos los derechos reservados.
+    </address>
 
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+
+
+  </footer>
+
+  <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </body>
 
 
