--- a/galeria.html
+++ b/galeria.html
@@ -36,33 +36,34 @@
     <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 0px;">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
   </header>
 
 
