--- a/contactos.html
+++ b/contactos.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina donde podras contactarnos y tambien poder enviar tu consulta">
-    <meta name="keywords" content="pepote, bulldog, bulldog ingles, contactos, whatsapp, instagram, facebook, email, consulta">
+    <meta name="keywords"
+        content="pepote, bulldog, bulldog ingles, contactos, whatsapp, instagram, facebook, email, consulta">
     <title>Pepote-Contactos</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,33 +36,34 @@
         <h2 class="bullDog container-fluid ">Bulldog Ingles</h2>
 
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon "></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 0px;">
-                      <li class="nav-item">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 0px;">
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="quienes-somos.html">¿Quienes somos?</a>
-                      </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="raza.html">raza</a>
-                      </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="cuidados.html">cuidados</a>
-                      </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="galeria.html">galeria</a>
-                      </li>
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contactos.html">contactos</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
     </header>
 
 
