--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light ">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background-color:rgb(248, 153, 0) ;">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
